# chat-audio-transcriber

./: README.md
.github/workflows/: docker-deploy.yml  terraform.yml
iac/: main.tf  outputs.tf  terraform.tfvars  variables.tf
src/: Dockerfile  main.py  pyproject.toml
